--- a/prj02_suppl/minesweeper.html
+++ b/prj02_suppl/minesweeper.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
         <title>Project 2</title>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>   
 
     <body>
 
-        <h1>Project 2</h1>
+        <h1>Minesweeper</h1>
         <div id="fields">
             <label for="_rows">Rows: </label>
             <input type="number" id="rows" name="_rows" value="10">
@@ -21,6 +22,7 @@
             <input type="number" name="_mines" id="mines" value="10">
             <button name="test" value="Submit" onclick="doAjax()">Generate</button>
         </div>
+        <div id="result" hidden="true"></div>
 
         <div id="minefield"></div>
         <script src="minesweep.js"></script>
