--- a/prj02_suppl/minesweeper.html
+++ b/prj02_suppl/minesweeper.html
@@ -27,6 +27,7 @@
         <div id="result" hidden>Test</div>
 
         <div id="minefield"></div>
+        <button name="test" value="Submit" id="bonusbutton" onclick="noInternet()">No internet? no problem!</button>
         <script src="minesweep.js"></script>
         <footer>
         </footer>
