--- a/prj02_suppl/minesweeper.html
+++ b/prj02_suppl/minesweeper.html
@@ -28,6 +28,7 @@
 
         <div id="minefield"></div>
         <button name="test" value="Submit" id="bonusbutton" onclick="noInternet()">No internet? no problem!</button>
+        <p id="explain">*only supports the default board</p>
         <script src="minesweep.js"></script>
         <footer>
         </footer>
